# cambio_dollar

./: .env.windows  .gitignore  LICENSE  Makefile  README_Windows.md  Windows_Installer_README.md  build_windows.py  package-lock.json  page.html  run_server.ps1  test_chart.js  test_chart_rendering.js  validate_windows_build.py  verify_functions.js
cambio_dollar/: .env.example  .env.windows  .gitignore  DIAGNOSTICO_Y_CORRECCIONES.md  MANIFEST.in  Makefile  PROYECTO_CAMBIO_DOLLAR.md  README.md  README_Windows.md  RESUMEN_EJECUTIVO.md  build_windows.py  cleanup_provider_names.py  pyinstaller_hooks.py  pyproject.toml  run_server.ps1  test_trade_api.sh
cambio_dollar/.github/workflows/: ci.yml
cambio_dollar/data/: sample_rates.csv
cambio_dollar/docs/: MEJORAS_DASHBOARD.md  ai_experimentation.md  ai_objectives.md  anomaly_detection_plan.md  data_pipeline.md  database_migrations.md  drift_monitoring.md  local_dev_setup.md  modernization_roadmap.md  next_steps.md  persistence_migration_strategy.md  user_manual.md
cambio_dollar/notebooks/: monitor_mercado.ipynb
cambio_dollar/src/cambio_dollar/: __init__.py  analytics.py  analytics_core.py  cli.py  config.py  data_provider.py  db_migrations.py  features.py  forecast.py  logging_utils.py  models.py  repository.py  scheduler.py  strategy.py
cambio_dollar/src/cambio_dollar/web/: __init__.py  (+1 more)
cambio_dollar/tests/: test_analysis.py  test_cli_drift.py  test_data_provider.py  test_logging_utils.py  test_provider_metrics_rollup.py  test_repository_extensions.py  test_web_api.py
cambio_dollar/tests/data/: infodolar_sample.html
(+17 files in other folders)
