[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cambio-dollar"
version = "0.1.0"
description = "Asistente inteligente para optimizar el cambio de USD a DOP utilizando analítica y pronósticos."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Tu Nombre", email = "tu.email@example.com"}
]
license = {text = "MIT"}
keywords = ["forex", "usd", "dop", "trading", "analytics"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "aiofiles>=24.1",
  "apscheduler>=3.10",
  "fastapi>=0.112",
  "httpx>=0.27",
  "jinja2>=3.1",
  "numpy>=1.26",
  "pandas>=2.0",
  "pydantic>=2.6",
  "pydantic-settings>=2.6",
  "rich>=13.7",
  "typer>=0.12",
  "plotly>=5.22",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30",
  "selectolax>=0.3",
  "SQLAlchemy>=2.0",
  "alembic>=1.13"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0"
]

[project.scripts]
cambio-dollar = "cambio_dollar.cli:app"
